# ai-project-features

./: .gitignore  README.md  app.py  env.sh  pyproject.toml  requirements.txt
docker/: Dockerfile  entrypoint.sh
scripts/: install.sh  start.sh
src/: config.py  main.py  memory.py  workflows.py
src/agents/: architecture_lookup_agent.py  code_writer_agent.py  doc_assembler_agent.py  feature_instantiation_agent.py  request_parser_agent.py  self_refine_agent.py  static_checker_agent.py  task_planner_agent.py
src/llm/: __init__.py  watson_client.py
src/templates/: flowchart.mmd
src/tools/: diff_generator.py  file_scanner.py
tests/: __init__.py  test_workflow.py
